# meta-matrix

./: .dockerignore  .drone.yml  Cargo.toml  Dockerfile
.circleci/: config.yml
src/: client.rs  config.rs  error.rs  main.rs  plugin.rs  plugins.rs
src/plugins/: choices.rs  google_search.rs
test/: google-search-page.html
