[package]
name = "meta-matrix"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
toml = "0.5"
thiserror = "1.0"
anyhow = "1.0"
url = "2.1.1"
log = { version = "0.4.11", features = ["release_max_level_warn"] }
pretty_env_logger = "0.4"
lazy_static = "1.4.0"
async-trait = "0.1"
reqwest = { version = "0.10.8", features = ["gzip", "blocking"] }
rink-core = { version = "0.5" }
matrix-sdk-common = { git = "https://github.com/matrix-org/matrix-rust-sdk", version = "0.1" }
scraper = "0.12"

[dependencies.matrix-sdk]
default-features = false
features = ["encryption", "sqlite_cryptostore", "messages", "native-tls"]
git = "https://github.com/matrix-org/matrix-rust-sdk"
version = "0.1"

# [profile.release]
# codegen-units = 1
# lto = "fat"
